--- a/wp-content/themes/goalvarenga/assets/sass/style.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/style.scss
@@ -1195,3 +1195,87 @@ footer{
                 }
         }
 }
+.single-projeto{
+        @extend .col-md-12;
+        padding: 0;
+        .container{
+                .swiper-container{
+                        padding: 70px 0;
+                        .swiper-wrapper{
+                                .swiper-slide{
+                                        .foto{
+                                                display: flex;
+                                                justify-content: center;
+                                                width: auto;
+                                        }
+                                }
+                        }
+                }
+                .swiper-button{
+                        top: unset;
+                        bottom: 55%;
+                        transform: translateY(50%);
+                        width: 50px;
+                        height: 60px;
+                        transition: all .4s;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        position: absolute;
+                        z-index: 99;
+                        background: transparent;                        
+                }
+                .prev, .next{
+                        width: auto;                       
+                        height: auto;
+                        svg{
+                                rect{
+                                        transition: all .3s;
+                                        &:hover{
+                                                transition: all .3s;
+                                                fill: $amarelo;
+                                        }
+                                }
+                        }
+                }
+                .next{
+                        right: 24%;
+                }
+                .prev{
+                        left: 24%;
+                }    
+                .descritivo{
+                        .box{
+                                padding: 30px 0px;
+                                background-color: #f5f5f5;
+                                &:nth-child(4){
+                                        .linha{
+                                                border: none;
+                                        }
+                                }
+                                .linha{
+                                        padding: 0px 40px;
+                                        border-right: 1px solid $cinza;
+                                        h3{
+                                                color: $amarelo;
+                                                font-weight: 700;
+                                                font-size: 20px;
+                                        }
+                                        p{
+                                                color: $preto;
+                                                font-weight: 300;
+                                                font-size: 16px;
+                                        }
+                                }
+                        }
+                }
+        }
+        .voltar{
+                padding: 80px 0;
+                text-align: center;
+                a{
+                        font-size: 23px;
+                        font-weight: 700;
+                }
+        }
+}
