--- a/wp-content/themes/goalvarenga/assets/sass/style.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/style.scss
@@ -1279,3 +1279,253 @@ footer{
                 }
         }
 }
+.contato{
+        @extend .col-md-12;
+        padding: 0;
+        .separador{
+                margin-top: 100px;
+                margin-bottom: 40px;
+                .info{
+                        @extend .col-md-6, .col-sm-12, .col-xs-12;
+                        .alinhamento{
+                                text-decoration: none;
+                                justify-content: flex-start;
+                                margin-bottom: 50px;
+                                width: fit-content;
+                                img{
+                                        margin-right: 20px;
+                                }
+                                span{
+                                        h3{
+                                                font-size: 16px;
+                                                color: $preto;
+                                                font-weight: 600;
+                                                margin: 0 0 5px 0;
+                                        }
+                                        p{
+                                                font-size: 16px;
+                                                color: $preto;
+                                                font-weight: 300;
+                                                margin: 0;
+                                        }
+                                }
+                        }
+                }
+                .formulario{
+                        @extend .col-md-6, .col-sm-12, .col-xs-12;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: baseline;
+                        flex-flow: wrap;
+                        .contact2-form{
+                                margin-bottom: 120px;
+                                h2{
+                                        padding: 0;
+                                        margin-top: 0;
+                                        position: relative;
+                                        &:after{
+                                                content: "";
+                                                background-color: $amarelo;
+                                                width: 142px;
+                                                height: 4px;
+                                                position: absolute;
+                                                bottom: -10px;
+                                                left: 0;
+                                        }
+                                }
+                                .texto{
+                                        @extend .col-md-12, .col-sm-12, .col-xs-12; 
+                                        padding: 0px;
+                                        margin: 30px 0; 
+                                }
+                                p{
+                                        font-size: 18px;
+                                        color: $preto; 
+                                } 
+                                input {
+                                        outline: none;
+                                        border: none;
+                                }
+                                textarea {
+                                        outline: none;
+                                        border: none;
+                                        resize: none;
+                                }
+                                textarea:focus, input:focus {
+                                        border-color: transparent !important;
+                                }
+                
+                                input:focus::-webkit-input-placeholder { color:transparent; }
+                                input:focus:-moz-placeholder { color:transparent; }
+                                input:focus::-moz-placeholder { color:transparent; }
+                                input:focus:-ms-input-placeholder { color:transparent; }
+                
+                                textarea:focus::-webkit-input-placeholder { color:transparent; }
+                                textarea:focus:-moz-placeholder { color:transparent; }
+                                textarea:focus::-moz-placeholder { color:transparent; }
+                                textarea:focus:-ms-input-placeholder { color:transparent; }
+                
+                                input::-webkit-input-placeholder { color: $amarelo; }
+                                input:-moz-placeholder { color: $amarelo; }
+                                input::-moz-placeholder { color: $amarelo; }
+                                input:-ms-input-placeholder { color: $amarelo; }
+                
+                                textarea::-webkit-input-placeholder { color: $amarelo; }
+                                textarea:-moz-placeholder { color: $amarelo; }
+                                textarea::-moz-placeholder { color: $amarelo; }
+                                textarea:-ms-input-placeholder { color: $amarelo; }
+                                .campos {
+                                        position: relative;                     
+                                        margin-bottom: 28px;
+                                }
+                                .input2 {
+                                        display: block;
+                                        padding-left: 10px;
+                                        width: 100%;
+                                        font-size: 18px;
+                                        color: $amarelo;
+                                        line-height: 1.2;
+                                        font-weight: normal;
+                                }
+                                .focus-input2 {
+                                        position: absolute;
+                                        display: block;
+                                        width: 100%;
+                                        height: 100%;
+                                        top: 0;
+                                        left: 0;
+                                        pointer-events: none;
+                                        font-weight: 300;
+
+                                }
+                                .focus-input2::before {
+                                        content: "";
+                                        display: block;
+                                        position: absolute;
+                                        bottom: 0px;
+                                        left: 0;
+                                        width: 100%;
+                                        border: 1px solid $amarelo;
+                                        
+                                        height: 45px;
+                                        -webkit-transition: all 0.4s;
+                                        -o-transition: all 0.4s;
+                                        -moz-transition: all 0.4s;
+                                        transition: all 0.4s;
+                                }
+                                .focus-input2::after {
+                                        content: attr(data-placeholder);
+                                        display: block;
+                                        width: 100%;
+                                        position: absolute;
+                                        top: 0px;
+                                        left: 10px;
+                                        font-size: 18px;
+                                        color: #6b6b6b;
+                                        line-height: 1.2;
+                                        -webkit-transition: all 0.4s;
+                                        -o-transition: all 0.4s;
+                                        -moz-transition: all 0.4s;
+                                        transition: all 0.4s;
+                                }
+                                /*---------------------------------------------*/
+                                input.input2 {
+                                        height: 55px;
+                                }
+                                input.input2 + .focus-input2::after {
+                                        top: 23px;
+                                        left: 10px;                     
+                                }
+                                textarea.input2 {
+                                        min-height: 129px;
+                                        padding-top: 13px;
+                                        padding-bottom: 13px;
+                                }
+                                textarea.input2 + .focus-input2::before {
+                                        height: 120px;                  
+                                }
+                                textarea.input2 + .focus-input2::after {
+                                        top: 12px;
+                                        left: 10;                       
+                                }
+                                .input2:focus + .focus-input2::after {
+                                        top: -11px;
+                                        font-size: 15px;
+                                }
+                                .input2:focus + .focus-input2::before {
+                                        width: 100%;
+                                        border: 1px solid #6b6b6b;
+                                }
+                                .has-val.input2 + .focus-input2::after {
+                                        top: -11px;
+                                        color: #6b6b6b;
+                                        font-size: 15px;
+                                }
+                                .has-val.input2 + .focus-input2::before {
+                                        width: 100%;
+                                        color: #f49b3a;
+                                        border: 1px solid #6b6b6b;
+                                }
+                                .campo2{
+                                        @extend .col-md-4, .col-sm-12, .col-xs-12;
+                                        padding: 0;
+                                }
+                                .campo3{
+                                        @extend .col-md-3, .col-sm-12, .col-xs-12;
+                                        width: 29.333333%;
+                                        margin-left: 2%;
+                                        margin-right: 2%;
+                                        padding: 0;
+                                        @media screen and (max-width: 900px) and (min-width: 220px) {
+                                                width: 100%;
+                                                margin-left: 0px;
+                                                margin-bottom: 15px;
+                                        }
+                                }
+                                .campo1{
+                                        @extend .col-md-12, .col-sm-12, .col-xs-12;
+                                        padding: 0;
+                                        margin-right: 5px;
+                                        @media screen and (max-width: 480px) and (min-width: 220px) {
+                                                margin-right: 0px;
+                                        }
+                                        @media screen and (max-width: 800px) and (min-width: 481px) {
+                                                margin-right: 0px;
+                                        }
+                                }
+                                .campo4{
+                                        @extend .col-md-12, .col-sm-12, .col-xs-12;
+                                        padding: 0;
+                                        margin-bottom: 28px;
+                                }
+                                .botao-enviar{
+                                        @extend .col-md-12, .col-sm-12, .col-xs-12;
+                                        padding: 0;
+                                        text-align: left;
+                                        button{
+                                                color: #fff;
+                                                background: #000;                    
+                                                border:none;
+                                                padding: 3px 20px;
+                                                border-radius: 5px;
+                                                transition: all .3s;
+                                                font-size: 23px;
+                                                font-weight: 700;
+                                                &:hover{                                        
+                                                        transition: all .3s;
+                                                        background: $amarelo;                                                                   
+                                                }
+                                        }
+                                }
+                        }
+                }
+        }
+        .mapa{
+                iframe{
+                        width: 100%;
+                }
+        }
+}
+.load{
+        display: none;
+}     
