--- a/wp-content/themes/goalvarenga/assets/sass/style.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/style.scss
@@ -160,6 +160,14 @@ main{
                 color: transparent;
                 position: absolute;
         }
+        @media only screen and (max-width: 770px){
+                h2{
+                        font-size: 32px;
+                }
+                span{
+                        font-size: 52px;
+                }
+        }
 }
 header{
         @extend .col-md-12;
@@ -732,6 +740,7 @@ footer{
                         }
                 }
                 @media only screen and (max-width: 770px){
+                        margin-top: 100px;
                         .swiper-container{
                                 .swiper-wrapper{
                                         .swiper-slide{
@@ -752,7 +761,10 @@ footer{
                                 .navegacao-swiper{
                                         justify-content: center;
                                         .botoes{
-                                                width: 20%;
+                                                width: 25%;
+                                                svg{
+                                                        width: 50px;
+                                                }
                                         }
                                 }
                         }
@@ -824,6 +836,16 @@ footer{
                         @media only screen and (max-width: 990px){
                                 margin-bottom: 0px;
                                 padding-bottom: 80px;
+                        }
+                }
+                @media only screen and (max-width: 770px){
+                        padding: 40px 0 0 0;
+                        .container{
+                                padding-bottom: 40px;
+                                margin-top: 32px;
+                                .textos{
+                                        width: 95%;
+                                }
                         }
                 }
         } 
@@ -936,6 +958,20 @@ footer{
                         }
 
                 }
+                @media only screen and (max-width: 770px){
+                        padding: 40px 0;
+                        .titulo{
+                                padding: 40px 0;
+                        }
+                        .card{
+                                .box{
+                                        .agrupador{
+                                                padding-left: 15px;
+                                                padding-right: 15px;
+                                        }
+                                }
+                        }
+                }
         }
         .projetos{
                 @extend .col-md-12;
@@ -1025,6 +1061,20 @@ footer{
                                         }
                                 }
                         }
+                        @media only screen and (max-width: 770px){
+                                margin-top: 40px;
+                                .swiper-container{
+                                        .swiper-wrapper{
+                                                .swiper-slide{
+                                                        .box-projetos{
+                                                                .botao-projetos{
+                                                                        left: 15%;
+                                                                }
+                                                        }
+                                                }
+                                        }
+                                }
+                        }
                 }
         }
         .obra{
@@ -1080,6 +1130,25 @@ footer{
                         padding: 50px 0;
                         h2{
                                 font-size: 52px;
+                        }
+                }
+                @media only screen and (max-width: 770px){
+                        h2{
+                                font-size: 42px;
+                        }
+                        .infos{
+                                flex-direction: column;
+                                .contato{
+                                        flex-direction: column;
+                                        margin-top: 20px;
+                                        margin-left: 0px;
+                                        span{
+                                                display: flex;
+                                                justify-content: center;
+                                                align-items: center;
+                                                flex-direction: column;
+                                        }
+                                }
                         }
                 }
         }
